--- a/thesis/datasets.tex
+++ b/thesis/datasets.tex
@@ -2,7 +2,7 @@
 In this chapter, we introduce the data sets that we use in our experiments. We provide a overview of the data sets, present their origin and describe possibly needed data cleaning processes that ensure a fair comparison. 
 \section{Archive Query Log}
 The Archive Query Log (AQL) was published by~\citet{reimer:2023} in order to expand the publically available query logs and promote research in the field of information retrieval. It was mined from the Internet Archive's \textit{Wayback Machine}~\footnote{\url{https://web.archive.org/}} by identifying search engine result pages (SERP) and parsing the queries from the corresponding URLs. \citet{reimer:2023} name two possible reasons why SERPs are archived in the Wayback Machine: First, SERPs can be linked to by web pages and may thus be included in automated web crawls of the Internet Archive. Secondly, any user of the Internet Archive can request archiving a specific URL, hence SERPs may be included, as well. Considering these two cases as the main sources, the AQL's queries would be a mixture of specific queries that users wanted to archive and queries which were linked to by web pages. This might bias the query distribution compared to a real-world search engine query log. The AQL contains around 356.6M queries from the years $1999$ to $2022$. Moreover, it covers a wide range of languages, namely 104 different languages, and a variety of domains. The most prominent domains in the AQL are Baidoo, Google, StackOverflow, Twitter and Youtube. The most frequent query languages in the AQL are English and Cantonese.  
-\subsection{AQL Cleaning}
+\subsection{AQL Cleaning}\label{sec:aql-cleaning}
 Some results of analysing the AQL have uncovered outliers and further abnormalities that should be removed to ensure a fair comparison between the query logs. First of all, the analysis of the query length distribution has shown that there are some exceptionally frequent lengths in the distribution. In Figure~\ref{fig:aql-character-count-old} we can see that the query length distribution has a peak at the lengths $14$, $16$ and $24$. Therefore, we take a look at the most frequent queries of these lengths. For each length, we find a particularly frequent query whose frequency outnumbers the second most frequent query by several orders of magnitude and likely produces the outlier in the distribution. We remove these uncommonly frequent queries from the data set. Secondly, we noted that a subset of the AQL's queries is subject to a decode error and, as a result, consist of replacement characters. We remove these queries from the data set as well. Lastly, we remove all empty queries, i.e., queries with an empty string, from the data set. 
 \begin{figure}[h]
     \centering
